--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "prebuild": "rm -rf ./build && mkdir ./build",
     "build": "NODE_ENV=production webpack",
     "test": "npm-run-all --parallel test:*",
+    "test:types": "flow",
     "test:unit": "jest --silent",
     "test:lint": "eslint source webpack",
     "precommit": "lint-staged && npm test"
@@ -45,17 +46,20 @@
     "babel-plugin-transform-class-properties": "6.24.1",
     "babel-plugin-transform-object-rest-spread": "6.26.0",
     "babel-preset-env": "1.6.1",
+    "babel-preset-flow": "6.23.0",
     "babel-preset-react": "6.24.1",
     "css-loader": "0.28.11",
     "eslint": "4.19.1",
     "eslint-config-airbnb": "^16.1.0",
     "eslint-config-prettier": "2.9.0",
     "eslint-import-resolver-webpack": "0.9.0",
+    "eslint-plugin-flowtype": "2.46.3",
     "eslint-plugin-import": "2.11.0",
     "eslint-plugin-jsx-a11y": "^6.0.3",
     "eslint-plugin-react": "7.7.0",
     "extract-text-webpack-plugin": "4.0.0-beta.0",
     "file-loader": "1.1.11",
+    "flow-bin": "0.71.0",
     "html-webpack-plugin": "3.2.0",
     "husky": "0.14.3",
     "jest": "22.4.3",
@@ -67,7 +71,7 @@
     "postcss-flexbugs-fixes": "3.3.1",
     "postcss-import": "11.1.0",
     "postcss-import-webpack-resolver": "1.0.1",
-    "postcss-loader": "2.1.4",
+    "postcss-loader": "2.1.5",
     "postcss-nesting": "5.0.0",
     "prettier": "1.12.1",
     "react-test-renderer": "16.3.2",
