--- a/.eslintrc
+++ b/.eslintrc
@@ -22,6 +22,7 @@
     "max-len": 0,
     "no-return-assign": 0,
     "no-useless-escape": 0,
+    "no-param-reassign": 0,
     "indent": [
       "error",
       2,
