--- a/package.json
+++ b/package.json
@@ -28,12 +28,14 @@
     ]
   },
   "dependencies": {
+    "babel-polyfill": "6.26.0",
     "prop-types": "15.6.1",
     "react": "16.3.2",
     "react-dom": "16.3.2",
     "react-hot-loader": "4.1.2",
     "react-redux": "5.0.7",
-    "redux": "4.0.0"
+    "redux": "4.0.0",
+    "redux-saga": "0.16.0"
   },
   "devDependencies": {
     "@storybook/react": "3.4.3",
