--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
   },
   "dependencies": {
     "babel-polyfill": "6.26.0",
+    "classnames": "2.2.5",
     "prop-types": "15.6.1",
     "react": "16.3.2",
     "react-dom": "16.3.2",
