--- a/.eslintrc
+++ b/.eslintrc
@@ -23,6 +23,7 @@
     "no-return-assign": 0,
     "no-useless-escape": 0,
     "no-param-reassign": 0,
+    "no-restricted-properties": 0,
     "indent": [
       "error",
       2,
